seaqt/QtScript/gen_qscriptstring.h

class QScriptString;
typedef struct QScriptString QScriptString;
QScriptString* QScriptString_new();
QScriptString* QScriptString_new2(QScriptString* other);
void QScriptString_operatorAssign(QScriptString* self, QScriptString* other);
bool QScriptString_isValid(const QScriptString* self);
bool QScriptString_operatorEqual(const QScriptString* self, QScriptString* other);
bool QScriptString_operatorNotEqual(const QScriptString* self, QScriptString* other);
unsigned int QScriptString_toArrayIndex(const QScriptString* self);
struct seaqt_string QScriptString_toString(const QScriptString* self);
struct seaqt_string QScriptString_ToQString(const QScriptString* self);
unsigned int QScriptString_toArrayIndexWithOk(const QScriptString* self, bool* ok);
void QScriptString_delete(QScriptString* self);